Fixed spacing around nav

--- a/.public/stylesheets/screen.css
+++ b/.public/stylesheets/screen.css
@@ -109,9 +109,6 @@ code {
   color: #DE3400;
   font-weight: bold;
 }
-.content {
-  padding: 1em 0;
-}
 .content a {
   border-bottom: 1px dashed #CCC;
 }
@@ -120,6 +117,7 @@ code {
 }
 .footer {
   border-top: 1px solid #EEE;
+  margin-top: 4em;
   font-size: .75em;
 }
 .footer > .social ul {
